manifest/objects/ALTF__Template_Qualifier__c.object
<CustomObject>
    <description>Holds Genius template qualifier text</description>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Question__c</fullName>
        <label>Qualifier Longname</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Template_Qualifier_ID__c</fullName>
        <externalId>true</externalId>
        <label>DMGQualifierID</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Tip__c</fullName>
        <label>Tip</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Altify Template Qualifier</label>
    <nameField>
        <label>Qualifier Shortname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Template Qualifiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>